[package]
name = "null-pointer-drone"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam-channel = "0.5.13"
# wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize"] }
wg_2024 = { git = "https://github.com/ZGako/WGL_repo_2024.git", branch = "new-method-for-drone-trait-redefinition" }